Updated style to make the website mobile friendly

--- a/web/index.html
+++ b/web/index.html
@@ -35,12 +35,14 @@
 
   <body>
     <div class="container">
-      <div id="info" class="col-xs-12 col-sm-10 col-sm-offset-1">
+      <div id="info" class="col-xs-12 col-md-10 col-md-offset-1">
 
         <div class="row">
           <div id="stats">
-            <img src="img/favicons/favicon-96x96.png" alt="logo">
-            <div class="pull-left">
+            <div class="pull-left padding">
+              <img src="img/favicons/favicon-96x96.png" alt="logo">
+            </div>
+            <div class="padding">
               <h1>Andrew's Scale</h1>
               <ul id="status">
                 <li>Last Weight: <span id="lastWeight"></span></li>
