--- a/web/index.html
+++ b/web/index.html
@@ -60,5 +60,6 @@
 
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="bower_components/highstock/highstock.js"></script>
+  <script src="js/highcharts-regression.js"></script>
   <script src="js/app.js"></script>
 </html>
