--- a/web/index.html
+++ b/web/index.html
@@ -38,23 +38,32 @@
       <div id="info" class="col-xs-12 col-md-10 col-md-offset-1">
 
         <div class="row">
-          <div id="stats">
-            <div class="pull-left padding">
-              <img src="img/favicons/favicon-96x96.png" alt="logo">
-            </div>
-            <div class="padding">
+          <div id="title" class="col-xs-12">
+            <img src="img/favicons/favicon-96x96.png" alt="logo">
+            <div id="rightSide">
               <h1>Andrew's Scale</h1>
-              <ul id="status">
+
+              <ul id="stats">
                 <li>Last Weight: <span id="lastWeight"></span></li>
+                <li>Average Weight: <span id="averageWeight"></span></li>
               </ul>
             </div>
           </div>
         </div>
 
+        <!-- <div class="row">
+          <div class="col-xs-12">
+            <ul class="padding" id="stats">
+              <li>Last Weight: <span id="lastWeight"></span></li>
+              <li>Average Weight: <span id="averageWeight"></span></li>
+            </ul>
+          </div>
+        </div> -->
+
         <div id="chartContainer" class="row">
           <div id="chart" class="col-xs-12"></div>
         </div>
-      </div>
+
     </div>
   </body>
 
