--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,7 @@
 
         <div class="row">
           <div id="title" class="col-xs-12">
-            <img src="img/favicons/favicon-96x96.png" alt="logo">
+            <img src="img/logo.svg" alt="logo">
             <div id="rightSide">
               <h1>Andrew's Scale</h1>
 
