Change stats to being last 30 days

--- a/web/index.html
+++ b/web/index.html
@@ -45,7 +45,9 @@
 
               <ul id="stats">
                 <li>Last Weight: <span id="lastWeight"></span></li>
-                <li>Average Weight: <span id="averageWeight"></span></li>
+                <li>30 Day Average Weight: <span id="averageWeight"></span></li>
+                <li>30 Day Low: <span id="lowWeight"></span></li>
+                <li>30 Day High: <span id="highWeight"></span></li>
               </ul>
             </div>
           </div>
