--- a/web/index.html
+++ b/web/index.html
@@ -46,8 +46,7 @@
               <ul id="stats">
                 <li>Last Weight: <span id="lastWeight"></span></li>
                 <li>30 Day Average Weight: <span id="averageWeight"></span></li>
-                <li>30 Day Low: <span id="lowWeight"></span></li>
-                <li>30 Day High: <span id="highWeight"></span></li>
+                <li>30 Day Low/High: <span id="lowWeight"></span> / <span id="highWeight"></span></li>
               </ul>
             </div>
           </div>
