Remove "weight" from average

--- a/web/index.html
+++ b/web/index.html
@@ -45,7 +45,7 @@
 
               <ul id="stats">
                 <li>Last Weight: <span id="lastWeight"></span></li>
-                <li>30 Day Average Weight: <span id="averageWeight"></span></li>
+                <li>30 Day Average: <span id="averageWeight"></span></li>
                 <li>30 Day Low/High: <span id="lowWeight"></span> / <span id="highWeight"></span></li>
               </ul>
             </div>
